# HW-FastApi-REST-API-auth-JWT

./: README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: d031d414fa76_init.py  e9e925e45f00_add_user.py
src/: schemas.py
src/conf/: config.ini
src/database/: models.py
src/repository/: contacts.py
src/routes/: auth.py  birthdays.py  contacts_crud.py  contacts_search.py
